...
            "state" : "translated",
            "value" : "登機中"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
...
        }
      }
    },
    "Not Now" : {
      "comment" : "Alert button: dismiss the update request"
    },
    "OK" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好"
          }
...
