...
            "state" : "translated",
            "value" : "預訂編號"
          }
        }
      }
    },
    "Bookings" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "预订"
          }
...
            "state" : "translated",
            "value" : "已列出你的行程"
          }
        }
      }
    },
    "Live Status" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "实时动态"
          }
...
